# ipmitool-dcmi-power-reading

./: Cargo.toml  README.md
.github/workflows/: rust.yml
debian/: changelog
src/: common.rs  main.rs
