[package]
name = "ipmitool-dcmi-power-reading"
version = "1.0.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.76.0"  # MSRV
description = "The Rust implementation of \"ipmitool dcmi power reading\""
homepage = "https://github.com/wdes/ipmitool-dcmi-power-reading#readme"
repository = "https://github.com/wdes/ipmitool-dcmi-power-reading"
readme = "README.md"
keywords = ["ipmitool", "dcmi", "power", "watts"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
]

[badges]
github = { repository = "ipmitool-dcmi-power-reading", branch = "main" }
is-it-maintained-issue-resolution = { repository = "ipmitool-dcmi-power-reading" }
is-it-maintained-open-issues = { repository = "ipmitool-dcmi-power-reading" }
maintenance = { status = "passively-maintained" }

[[bin]]
name = "ipmitool-dcmi-power-reading"
path = "src/main.rs"

[profile.release]
# See: https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "William Desportes <williamdes@wdes.fr>"
copyright = "2024, William Desportes <williamdes@wdes.fr>"
license-file = ["LICENSE"]
extended-description = """\
The Rust implementation of \"ipmitool dcmi power reading\""""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ipmitool-dcmi-power-reading", "usr/bin/ipmitool-dcmi-power-reading", "755"],
    ["README.md", "usr/share/doc/ipmitool-dcmi-power-reading/README", "644"],
]
revision = "1"
changelog = "debian/changelog"

[dependencies]
ipmi-rs = "0.2.1"
pretty_env_logger = "0.4"
clap = { version = "4.3", features = [ "derive" ]}
log = "0.4"
binary-layout = "4.0.2"
chrono = "0.4.38"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
